# erlt

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  LANGUAGE_OVERVIEW.md  Makefile  README.md  common.mk  dir.mk  erl1.mk  erl2.mk  erlang_ls.config  erlt.mk  rebar.config
.github/workflows/: Makefile  README.md  coralizer.dhall  coralizer.yml  eqwalizer.dhall  eqwalizer.yml  erlang.yml  erlt.dhall  erlt.yml  release.dhall  release.yml  sterlang-release.dhall  sterlang-release.yml  sterlang.dhall  sterlang.yml
Haskell simulation/: GenServer.lhs  NamedGenServer.lhs  Processes.lhs  TestProcesses.hs
analyzer/: .gitignore  .scalafmt.conf  README.md  analyzer.erl  built.sbt  third_party
aoc/: README.md  rebar.config
builtins/: Makefile  README.md  erlang.erlt  make_statics.escript  t_io.erlt  t_lists.erlt
coralizer/: README.md  built.sbt  core_analyzer.erl
coralizer/project/: plugins.sbt
coralizer/test_projects/: .gitignore  rebar.config
corq/: .gitignore  README.md  built.sbt  core_analyzer.erl
corq/test_projects/: rebar.config
doc/: 01_intro.md  02_syntax.md  03_modes.md  04_enums.md  05_polymorphic_records.md  05_structs.md  06_st_mapping.md  07_import_type.md  08_compiler_architecture.md  README.md  design_principles.md  development.md  import_type.md  internal.md  language_overview.md  shapes.md  structs_and_enums.md  vision.md
editors/: README.md
editors/elisp/: erlt-mode.el
elisp/: erlt-mode.el  lsp-erlt.el
elp/: README.md
elp/baltazar/: .gitignore  Cargo.toml  rustfmt.toml
elp/baltazar/crates/baltazar/: Cargo.toml
elp/baltazar/crates/baltazar/src/: config.rs  convert.rs  diagnostics.rs  document.rs  lib.rs  line_index.rs  passthru.rs  server.rs  server_setup.rs  task_pool.rs
elp/baltazar/crates/baltazar/src/server/: dispatch.rs
elp/baltazar/crates/baltazar/src/server_setup/: capabilities.rs
elp/baltazar/crates/ide/: Cargo.toml
elp/baltazar/crates/ide/src/: cancelled.rs  diagnostics.rs  lib.rs  line_index.rs
elp/baltazar/crates/syntax/: Cargo.toml
elp/baltazar/crates/syntax/src/: ast.rs  generated.rs  lib.rs  syntax.rs
elp/baltazar/xtask/: Cargo.toml
elp/baltazar/xtask/src/: codegen.rs  main.rs
elp/h-elp/: .gitignore  CHANGELOG.md  README.md  cabal.project  h-elp.cabal  hie.yaml
elp/h-elp/semantic-erlang/: BUILD.bazel  LICENSE  README.md  semantic-erlang.cabal
elp/h-elp/semantic-erlang/src/Language/: Erlang.hs
elp/h-elp/semantic-erlang/src/Language/Erlang/: AST.hs  Grammar.hs  Tags.hs
elp/h-elp/semantic-erlang/test/: Test.hs
elp/h-elp/tree-sitter-elp/: ChangeLog.md  hie.yaml  tags  tree-sitter-elp.cabal
elp/h-elp/tree-sitter-elp/TreeSitter/: ErlangELP.hs
elp/h-elp/tree-sitter-elp/examples/: Demo.hs
elp/tree-sitter-erlang/: Makefile  README.md  binding.gyp  grammar.js  index.js  package-lock.json  package.json
eqwalizer/: .gitignore  .scalafmt.conf  built.sbt  milestones.md  otp_lib.escript  readme.md
eqwalizer/test_projects/: rebar.config
erl-analyzer/tree-sitter-erlang/: grammar.js  index.js  package.json
erl2c/: .gitignore  erl2ocaml_test.sh
erl2c/erl2ocaml_examples/: Ffi.ml  Ffi.mli  example01.erl  example01.ml  example02.erl  example02.ml  mod01.erl  mod01.ml  mod01.mli  mod02.erl  mod02.ml  mod02.mli  mod03.erl  mod03.ml  mod03.mli  mod04.erl  mod04.ml  mod04.mli
erl2c/src/: Makefile  a0.erl  erl2_ast_export.erl  erl2_caret.erl  erl2_compile.erl  erl2_compile2.erl  erl2_deps.erl  erl2_dots.erl  erl2_enum.erl  erl2_epp.erl  erl2_exception.erl  erl2_expand.erl  erl2_lint.erl  erl2_message.erl  erl2_module_record.erl  erl2_parse.yrl  erl2_pp.erl  erl2_scan.erl  erl2c.erl  erl2etf.erl  erl2ocaml.erl  erl2ocaml_pattern.erl  erl_lint.erl  erl_parse.yrl  foo.erl  make_escript
erl2c/test/: Makefile  README.md  dots_SUITE.erl  enum_SUITE.erl  module_record_SUITE.erl
erlbuild/: .gitignore  README.md  erlbuild.mk  make_erlbuild_template_mk.escript  rebar.config
erlbuild/src/: Makefile  erlbuild.app.src  erlbuild.erl  erlbuild.template.mk  erlbuild_basic_mode.erl  erlbuild_compile.erl  erlbuild_erlc.erl  erlbuild_pt_util.erl  erlbuild_types.hrl  erlbuild_util.erl  rebar3_erlt_prv.erl  rebar_prv_erlt.erl  rebar_prv_erlt_compile.erl
erlt/: .gitignore  make_erlt_build_template_mk.escript  rebar.config
erlt/src/: erlt.app.src  erlt.erl  erlt_build.erl  erlt_build.template.mk  erlt_build_basic_mode.erl  erlt_build_types.hrl  erlt_build_util.erl  erlt_compile.erl  erlt_compile.hrl  erlt_epp.erl  erlt_pinning.erl  erlt_pp.erl  rebar_prv_erlt.erl
erltc/: .gitignore  make_statics.escript  rebar.config
erltc/built_ins/: .gitignore  Makefile  README.md  erlang.erlt  erlt_build.template.mk  io.erlt  lists.erlt  make_statics.escript  t_io.erlt  t_lists.erlt
erltc/src/: Makefile  a0.erl  erl2_util.erl  erlt2etf.erl  erlt_anon_struct.erl  erlt_ast.erl  erlt_ast.hrl  erlt_atom.erl  erlt_build.erl  erlt_build_basic_mode.erl  erlt_build_statics.erl  erlt_build_types.hrl  erlt_caret.erl  erlt_common.hrl  erlt_compile.erl  erlt_compile.hrl  erlt_defs.erl  erlt_deps.erl  erlt_dots.erl  erlt_enum.erl  erlt_epp.erl  erlt_exception.erl  erlt_expand.erl  erlt_import.erl  erlt_language_server.erl  erlt_lint.erl  erlt_lint_types.erl  erlt_message.erl  erlt_messages.erl  erlt_modifiers.erl  erlt_module_record.erl  erlt_otp_compile.erl  erlt_parse.yrl  erlt_pinning.erl  erlt_pp.erl  (+11 more)
examples/: Makefile  README.md  erlang_ls.config  rebar.config
experiments/: eep-type-hints.md  exceptions_gadt.ml
play/: README.md  rebar.config
record-to-struct/: README.md
rpc/: .gitignore  Makefile  Readme.md
sbtn/: .gitignore  dl.sh
scripts/: .gitignore  README.md  dl-rebar3.sh  dl-sbtn.sh  fetch-and-install-sterlang-native.sh  rebar3  sbtn
sterlang/: .gitignore  .scalafmt.conf  Makefile  README.md  build.sbt  coverage.md  erl2etf  erlt  erltc  parser
test_util/: beam_to_erl.escript  disassemble.escript
tests/: Makefile  README.md  dev.vm.args  erlang_ls.config
tools/: disassemble.escript
vscode/: .vscodeignore  DEVELOPERS-README.md  README.md  language-configuration.json  package-lock.json  package.json
(+3484 files in other folders)
