[package]
authors = ["Michał Muskała <micmus@whatsapp.com>"]
edition = "2018"
name = "xtask"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
pico-args = "0.3"
quote = "1.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tree-sitter-erlang = {path = "../crates/tree-sitter-erlang", version = "*"}
tree-sitter = "0.16"
xshell = "0.1"
