cabal-version:       2.4

name:                semantic-erlang
version:             0.0.0.0
synopsis:            Semantic support for Erlang
description:         Semantic support for Erlang.
homepage:            https://github.com/WhatsApp/erlt/tree/master/elp/h-elp/semantic-erlang#readme
bug-reports:         https://github.com/WhatsApp/erlt/issues
license:             Apache-2.0
license-file:        LICENSE
author:              The Semantic authors, Alexei Pastuchov
maintainer:          opensource+semantic@github.com
copyright:           (c) 2020 Facebook
category:            Language
build-type:          Simple
stability:           alpha
extra-source-files:  README.md

tested-with:         GHC == 8.10.3

common haskell
  default-language:    Haskell2010
  ghc-options:
    -Weverything
    -Wno-missing-local-signatures
    -Wno-missing-import-lists
    -Wno-implicit-prelude
    -Wno-safe
    -Wno-unsafe
    -Wno-name-shadowing
    -Wno-monomorphism-restriction
    -Wno-missed-specialisations
    -Wno-all-missed-specialisations
    -Wno-star-is-type
  if (impl(ghc >= 8.8))
    ghc-options: -Wno-missing-deriving-strategies
  if (impl(ghc >= 8.10))
    ghc-options:
      -Wno-missing-safe-haskell-mode
      -Wno-prepositive-qualified-module
  cpp-options:
    -DBAZEL_BUILD=0

library
  import: haskell
  exposed-modules:
    Language.Erlang
    Language.Erlang.AST
    Language.Erlang.Grammar
    Language.Erlang.Tags
  hs-source-dirs:      src
  build-depends:
    , base  >= 4.13 && < 5
    , fused-effects ^>= 1.1
    , semantic-ast
    , semantic-source ^>= 0.1.0.1
    , semantic-tags ^>= 0.0
    , template-haskell  >= 2.15 && < 2.17
    , text ^>= 1.2.3
    , tree-sitter ^>= 0.9
    , tree-sitter-elp ^>= 0.1.0.0

test-suite test
  import: haskell
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Test.hs
  build-depends:
    , base
    , pathtype ^>= 0.8.1
    , semantic-ast
    , semantic-erlang
    , tasty
    , tree-sitter-elp ^>= 0.1.0.0
