[package]
name = "baltazar"
version = "0.1.0"
authors = ["Michał Muskała <micmus@whatsapp.com>"]
edition = "2018"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "baltazar"
path = "src/bin/main.rs"

[dependencies]
anyhow = "1.0"
pico-args = "0.4.0"
