[package]
authors = ["Michał Muskała <micmus@whatsapp.com>"]
autobins = false
edition = "2018"
name = "baltazar"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "baltazar"
path = "src/bin/main.rs"

[dependencies]
anyhow = "1.0"
env_logger = "0.8.2"
log = "0.4.14"
lsp-server = "0.5.0"
lsp-types = "0.86.0"
parking_lot = "0.11.1"
pico-args = "0.4.0"
serde = "1.0"
serde_json = "1.0"
serde_path_to_error = "0.1.4"
