[package]
authors = ["Michał Muskała <micmus@whatsapp.com>"]
edition = "2018"
name = "baltazar_ide"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salsa = "0.16.0"
baltazar_syntax = {path = "../syntax"}
vfs = {git = "https://github.com/rust-analyzer/rust-analyzer", rev = "336909b"}
