[package]
authors = ["Michał Muskała <micmus@whatsapp.com>"]
edition = "2018"
name = "baltazar_ide"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
baltazar_syntax = {path = "../syntax"}
fxhash = "0.2.1"
log = "0.4.14"
salsa = "0.16.0"
text-size = "1.1"
vfs = {git = "https://github.com/rust-analyzer/rust-analyzer", rev = "336909b"}
