[package]
name = "baltazar_syntax"
version = "0.1.0"
authors = ["Michał Muskała <micmus@whatsapp.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter-erlang = { path = "../tree-sitter-erlang", version = "*" }
tree-sitter = "0.17"
